Fix inconsistent break line on IE9-10

--- a/_less/ie.css
+++ b/_less/ie.css
@@ -267,6 +267,7 @@ body{
 	width:72px;
 	height:110px;
 	vertical-align:top;
+	white-space:normal;
 }
 .previewrow div a img{
 	display:block;
