--- a/_less/screen.less
+++ b/_less/screen.less
@@ -748,6 +748,7 @@ li p{
 	height:110px;
 	display:inline-block;
 	vertical-align:top;
+	white-space:nowrap;
 }
 .previewrow>div>div{
 	opacity:0;
